force-app/main/default/objects/Account/fields/Beneficiary_Address__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Address__c</fullName>
    <label>Beneficiary Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>