force-app/main/default/objects/Account/fields/Crimson_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Crimson_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crimson Enabled - Rehab</label>
    <type>Checkbox</type>
</CustomField>