force-app/main/default/objects/Account/fields/GC_Email__c.field-meta.xml
<CustomField>
    <fullName>GC_Email__c</fullName>
    <label>GC Email - Rehab</label>
    <type>Email</type>
</CustomField>