force-app/main/default/objects/Account/fields/GC_Market__c.field-meta.xml
<CustomField>
    <fullName>GC_Market__c</fullName>
    <inlineHelpText>The market in which the GC is operating</inlineHelpText>
    <label>GC Market</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alabama - Other</fullName>
            </value>
            <value>
                <fullName>Alaska - Other</fullName>
            </value>
            <value>
                <fullName>Albany Area</fullName>
            </value>
            <value>
                <fullName>Albany Suburbs Massachusetts</fullName>
            </value>
            <value>
                <fullName>Albuquerque</fullName>
            </value>
            <value>
                <fullName>Arizona - Other</fullName>
            </value>
            <value>
                <fullName>Arkansas - Other</fullName>
            </value>
            <value>
                <fullName>Atlanta Area</fullName>
            </value>
            <value>
                <fullName>Austin Area</fullName>
            </value>
            <value>
                <fullName>Baltimore Area</fullName>
            </value>
            <value>
                <fullName>Baltimore Suburbs Pennsylvania</fullName>
            </value>
            <value>
                <fullName>Binghamton Area</fullName>
            </value>
            <value>
                <fullName>Binghamton Suburbs PA</fullName>
            </value>
            <value>
                <fullName>Birmingham Area</fullName>
            </value>
            <value>
                <fullName>Boston Area</fullName>
            </value>
            <value>
                <fullName>Bridgeport Area</fullName>
            </value>
            <value>
                <fullName>Bridgeport Suburbs Massachusetts</fullName>
            </value>
            <value>
                <fullName>Buffalo Area</fullName>
            </value>
            <value>
                <fullName>California - Other</fullName>
            </value>
            <value>
                <fullName>Central Jersey Area</fullName>
            </value>
            <value>
                <fullName>Charlotte Area</fullName>
            </value>
            <value>
                <fullName>Charlotte Suburbs South Carolina</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Chicago Area Suburbs IL</fullName>
            </value>
            <value>
                <fullName>Cincinnati Area</fullName>
            </value>
            <value>
                <fullName>Cincinnati Suburbs Indiana</fullName>
            </value>
            <value>
                <fullName>Cincinnati Suburbs Kentucky</fullName>
            </value>
            <value>
                <fullName>Cleveland Area</fullName>
            </value>
            <value>
                <fullName>Colorado - Other</fullName>
            </value>
            <value>
                <fullName>Columbia Suburbs Georgia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>