force-app/main/default/objects/Account/fields/HOA_Email__c.field-meta.xml
<CustomField>
    <fullName>HOA_Email__c</fullName>
    <label>HOA Email</label>
    <type>Email</type>
</CustomField>