force-app/main/default/objects/Account/fields/HOA_Phone__c.field-meta.xml
<CustomField>
    <fullName>HOA_Phone__c</fullName>
    <label>HOA Phone</label>
    <type>Phone</type>
</CustomField>