force-app/main/default/objects/Account/fields/HOA_Remit_Address__c.field-meta.xml
<CustomField>
    <fullName>HOA_Remit_Address__c</fullName>
    <label>HOA Remit Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>