force-app/main/default/objects/Account/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the given company/Vendor is active</description>
    <inlineHelpText>If the given company/Vendor is active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>