force-app/main/default/objects/Account/fields/of_HOAs_Per_Property__c.field-meta.xml
<CustomField>
    <fullName>of_HOAs_Per_Property__c</fullName>
    <label># of HOAs Per Property</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>