force-app/main/default/objects/Account/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <length>29</length>
    <type>Text</type>
</CustomField>