force-app/main/default/objects/Account/fields/Rental_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Rental_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Restrictions</label>
    <type>Checkbox</type>
</CustomField>