force-app/main/default/objects/Account/fields/Rental_Restrictions_List__c.field-meta.xml
<CustomField>
    <fullName>Rental_Restrictions_List__c</fullName>
    <label>Rental Restrictions List</label>
    <type>TextArea</type>
</CustomField>