force-app/main/default/objects/Account/fields/Speciality_Vendor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Speciality_Vendor_Phone__c</fullName>
    <label>Speciality Vendor Phone</label>
    <type>Phone</type>
</CustomField>