force-app/main/default/objects/Account/recordTypes/Broker.recordType-meta.xml
<RecordType>
    <fullName>Broker</fullName>
    <active>true</active>
    <description>This is the RT for Broker Companies</description>
    <label>Broker</label>

</RecordType>