force-app/main/default/objects/Account/recordTypes/General_Contractor.recordType-meta.xml
<RecordType>
    <fullName>General_Contractor</fullName>
    <active>true</active>
    <description>Vendors for Construction team</description>
    <label>General Contractor</label>
    
</RecordType>