force-app/main/default/objects/Account/recordTypes/Homeowner_Association.recordType-meta.xml
<RecordType>
    <fullName>Homeowner_Association</fullName>
    <active>true</active>
    <description>HOA</description>
    <label>Homeowner Association</label>
    
</RecordType>