force-app/main/default/objects/Account/recordTypes/Speciality_Vendor.recordType-meta.xml
<RecordType>
    <fullName>Speciality_Vendor</fullName>
    <active>true</active>
    <description>This Record Type is selected for contractors who perform specific task/repairs</description>
    <label>Speciality Vendor</label>
    
</RecordType>