force-app/main/default/objects/Account/recordTypes/Title_Company.recordType-meta.xml
<RecordType>
    <fullName>Title_Company</fullName>
    <active>true</active>
    <description>This is the Record Type for the Title, Escrow and Closing Company owned by the Treasury Team.</description>
    <label>Title Company</label>
</RecordType>